[project]
name = "web-search-lmstudio-mcp"
version = "0.1.0"
description = "A local web search server for LM Studio that enables AI models to search the web and retrieve content from web pages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "duckduckgo-search==5.3.0",
    "fastmcp[server]>=2.11.3",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
